@@ -272,7 +272,11 @@ html: <p>Please email why@domain.com or jason@domain.com.</p>
 name: del
 desc: To indicate a passage which has been deleted, surround the passage with hypens.
 in: I'm -sure- not sure.
-html: <p>I&#8217;m <del>sure</del> not sure.</p>
+html: "<p>I&#8217;m <del>sure</del> not sure.</p>"
+--- 
+name: del beginning a phrase
+in: -delete-
+html: "<p><del>delete</del></p>"
 --- 
 name: ins
 desc: Pluses around a passage indicate its insertion.
